--- a/index.html
+++ b/index.html
@@ -1,12 +1,223 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Free Online Chess</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>OnlineChess — demo</title>
+  <!-- Chessboard.js and chess.js from CDNs -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.css" integrity="" crossorigin="anonymous">
+  <style>
+    :root{
+      --bg:#0b1220; --panel:#0f1724; --accent:#60a5fa; --muted:#94a3b8; --card:#0b1220; color-scheme: dark;
+    }
+    html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial; background: linear-gradient(180deg,#071028 0%, #071a2a 100%); color:#e6eef8}
+    .app{max-width:1200px;margin:32px auto;padding:20px;display:grid;gap:18px;grid-template-columns: 640px 1fr}
+    .header{display:flex;align-items:center;gap:12px}
+    .logo{font-weight:700;font-size:20px;color:var(--accent);text-decoration:none}
+    .board-panel{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:18px;box-shadow:0 6px 30px rgba(2,6,23,0.6)}
+    #board{width:560px;margin:0 auto}
+    .controls{display:flex;gap:8px;justify-content:center;margin-top:12px}
+    button{background:transparent;border:1px solid rgba(255,255,255,0.06);padding:8px 12px;border-radius:8px;color:var(--muted);cursor:pointer}
+    button.primary{background:linear-gradient(90deg,var(--accent),#3b82f6);border:none;color:white}
+    .side-panel{display:flex;flex-direction:column;gap:12px}
+    .card{background:rgba(255,255,255,0.02);padding:14px;border-radius:12px;border:1px solid rgba(255,255,255,0.03)}
+    .players{display:flex;gap:10px;align-items:center;justify-content:space-between}
+    .clock{font-size:20px;font-weight:700}
+    .moves{height:200px;overflow:auto;background:transparent;padding:10px;border-radius:8px}
+    .chat-input{display:flex;gap:8px}
+    .chat-input textarea{flex:1;height:48px;border-radius:8px;padding:8px;background:transparent;border:1px solid rgba(255,255,255,0.04);color:inherit}
+    .chat-messages{height:150px;overflow:auto;padding:8px;display:flex;flex-direction:column;gap:6px}
+    .msg{padding:8px;border-radius:8px;background:rgba(255,255,255,0.02);font-size:13px}
+    @media (max-width:900px){.app{grid-template-columns:1fr;max-width:900px}.board-panel{order:0}.side-panel{order:1}}
+  </style>
 </head>
 <body>
-    <a href="./index.html"><h1>onlinechess.org</h1></a>
-    <textarea name="" id="" placeholder="Please be nice in the chat!"></textarea>
+  <div class="app">
+    <div class="board-panel card">
+      <div class="header">
+        <a class="logo" href="#">onlinechess.org</a>
+        <div style="margin-left:auto;color:var(--muted)">Local demo — two players on one device</div>
+      </div>
+
+      <div id="board"></div>
+
+      <div class="controls">
+        <button id="newBtn" class="primary">New Game</button>
+        <button id="undoBtn">Undo</button>
+        <button id="flipBtn">Flip</button>
+        <button id="fenBtn">Export FEN</button>
+        <button id="pgnBtn">Export PGN</button>
+      </div>
+
+      <div style="margin-top:12px;display:flex;justify-content:center;gap:30px;color:var(--muted)">
+        <div>
+          <div style="font-size:12px">White</div>
+          <div id="whiteClock" class="clock">00:10:00</div>
+        </div>
+        <div>
+          <div style="font-size:12px">Black</div>
+          <div id="blackClock" class="clock">00:10:00</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="side-panel">
+      <div class="card">
+        <div style="font-weight:700;margin-bottom:8px">Moves</div>
+        <div id="moves" class="moves"></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700;margin-bottom:8px">Chat</div>
+        <div id="chat" class="chat-messages"></div>
+        <div class="chat-input" style="margin-top:8px">
+          <textarea id="chatInput" placeholder="Please be nice in the chat!"></textarea>
+          <button id="sendChat">Send</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700;margin-bottom:8px">Game Info</div>
+        <div style="font-size:13px;color:var(--muted)">Click and drag pieces to move. Legal moves are enforced (powered by chess.js). This demo uses Chessboard.js for the UI. You can export FEN/PGN or copy them.</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Libraries -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/1.0.0/chess.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.js"></script>
+
+  <script>
+    // Create Chess instance from chess.js
+    const game = new Chess();
+
+    // Create the board using Chessboard.js
+    const board = Chessboard('board', {
+      draggable: true,
+      position: 'start',
+      pieceTheme: 'https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/img/chesspieces/wikipedia/{piece}.png',
+      onDragStart: (source, piece, position, orientation) => {
+        if (game.game_over()) return false;
+        // only allow dragging if the piece belongs to the side to move
+        if ((game.turn() === 'w' && piece.search(/^b/) !== -1) || (game.turn() === 'b' && piece.search(/^w/) !== -1)) {
+          return false;
+        }
+      },
+      onDrop: (source, target) => {
+        const move = game.move({ from: source, to: target, promotion: 'q' });
+        if (move === null) return 'snapback';
+        updateStatus();
+      },
+      onSnapEnd: () => {
+        board.position(game.fen());
+      }
+    });
+
+    // UI elements
+    const movesEl = document.getElementById('moves');
+    const newBtn = document.getElementById('newBtn');
+    const undoBtn = document.getElementById('undoBtn');
+    const flipBtn = document.getElementById('flipBtn');
+    const fenBtn = document.getElementById('fenBtn');
+    const pgnBtn = document.getElementById('pgnBtn');
+
+    function updateMoves(){
+      const history = game.history({ verbose: true });
+      let html = '';
+      for(let i=0;i<history.length;i+=2){
+        const moveNum = Math.floor(i/2)+1;
+        const white = history[i] ? history[i].san : '';
+        const black = history[i+1] ? history[i+1].san : '';
+        html += `<div style=\"display:flex;justify-content:space-between;padding:6px 8px;border-bottom:1px dashed rgba(255,255,255,0.02)\"><div>${moveNum}. ${white}</div><div>${black}</div></div>`;
+      }
+      movesEl.innerHTML = html;
+      movesEl.scrollTop = movesEl.scrollHeight;
+    }
+
+    function updateStatus(){
+      updateMoves();
+      if (game.in_checkmate()){
+        alert('Checkmate — ' + (game.turn() === 'w' ? 'Black' : 'White') + ' wins');
+      } else if (game.in_draw()){
+        alert('Draw');
+      } else if (game.in_check()){
+        // small visual cue could be added
+      }
+    }
+
+    newBtn.addEventListener('click', ()=>{
+      game.reset();
+      board.start(true);
+      updateStatus();
+    });
+
+    undoBtn.addEventListener('click', ()=>{
+      game.undo();
+      board.position(game.fen());
+      updateStatus();
+    });
+
+    flipBtn.addEventListener('click', ()=>{
+      board.flip();
+    });
+
+    fenBtn.addEventListener('click', ()=>{
+      const fen = game.fen();
+      prompt('FEN (copy):', fen);
+    });
+
+    pgnBtn.addEventListener('click', ()=>{
+      const pgn = game.pgn();
+      prompt('PGN (copy):', pgn);
+    });
+
+    // Simple chat
+    const chat = document.getElementById('chat');
+    const chatInput = document.getElementById('chatInput');
+    const sendChat = document.getElementById('sendChat');
+    sendChat.addEventListener('click', ()=>{
+      const text = chatInput.value.trim();
+      if(!text) return;
+      const node = document.createElement('div'); node.className='msg'; node.textContent = 'You: ' + text;
+      chat.appendChild(node);
+      chatInput.value=''; chat.scrollTop = chat.scrollHeight;
+    });
+
+    // Basic clocks (10 minutes each) — simple decrement by seconds when side to move
+    let whiteSeconds = 10*60;
+    let blackSeconds = 10*60;
+    let clockInterval = null;
+
+    function formatTime(s){
+      const m = Math.floor(s/60).toString().padStart(2,'0');
+      const sec = (s%60).toString().padStart(2,'0');
+      return `${m}:${sec}`;
+    }
+
+    function startClock(){
+      if(clockInterval) clearInterval(clockInterval);
+      clockInterval = setInterval(()=>{
+        if(game.turn() === 'w'){
+          whiteSeconds = Math.max(0, whiteSeconds-1);
+          document.getElementById('whiteClock').textContent = formatTime(whiteSeconds);
+        } else {
+          blackSeconds = Math.max(0, blackSeconds-1);
+          document.getElementById('blackClock').textContent = formatTime(blackSeconds);
+        }
+        if(whiteSeconds===0 || blackSeconds===0){
+          clearInterval(clockInterval);
+          alert('Time over — ' + (whiteSeconds===0 ? 'Black' : 'White') + ' wins on time');
+        }
+      },1000);
+    }
+
+    // Start clock on first move
+    document.addEventListener('click', ()=>{
+      if(!clockInterval) startClock();
+    }, { once: true });
+
+    // initialise
+    updateStatus();
+  </script>
 </body>
 </html>
