Add Chessground CSS stylesheets to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>OnlineChess — Chessground Edition</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chessground@8.1.2/assets/chessground.base.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chessground@8.1.2/assets/themes/blue.css">
   <style>
     :root{
       --bg:#0b1220; --panel:#0f1724; --accent:#60a5fa; --muted:#94a3b8; color-scheme: dark;
